--- a/non-linear-narrative/style.css
+++ b/non-linear-narrative/style.css
@@ -1,18 +1,20 @@
-p{
-	margin-left: 30px;
-	margin-top: 30px;
-	margin-right: 500px;
-	text-indent: 50px;
-	color: white;
+div{
+	width:300px;
+	height:200px;
+	font-size: 24px;
+	margin-left: 20px;
+	display: inline-block; 
 }
 *{
 	font-family: 'Rokkitt',serif;
 	background-color: #3059c0;
+	color: white;
+	text-decoration: none;
 }
-img{
-	display:block;
-	height: 600px;
-	width: 400px;
-	margin-top:-655px;
-	margin-left: 800px;
+a{
+	color:#ed6243;
 }
+h1{
+	color:#ed6243;
+}
+
